--- a/www/src/main/resources/application.yml
+++ b/www/src/main/resources/application.yml
@@ -10,3 +10,10 @@ spring:
     url: jdbc:mysql://ec2-3-131-93-152.us-east-2.compute.amazonaws.com:3306/traverse?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
     username: user1
     password: traverse
+
+server:
+  servlet:
+    session:
+      tracking-modes: cookie
+      
+        
