--- a/www/src/main/resources/application.yml
+++ b/www/src/main/resources/application.yml
@@ -10,6 +10,15 @@ spring:
     url: jdbc:mysql://ec2-3-131-93-152.us-east-2.compute.amazonaws.com:3306/traverse?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
     username: user1
     password: traverse
+    hikari:
+      maximum-pool-size: 10
+      connection-timeout: 5000
+      connection-init-sql: SELECT 1
+      validation-timeout: 2000
+      minimum-idle: 10
+      idle-timeout: 600000
+      max-lifetime: 1800000
+
 
 server:
   servlet:
