길찾기, 비번확인

--- a/www/src/main/resources/application.yml
+++ b/www/src/main/resources/application.yml
@@ -25,4 +25,7 @@ server:
     session:
       tracking-modes: cookie
       
-        
+kakao:
+  api:
+    key: a1a7717c2c3bc1327ef51412b55ac5ef 
+    
