--- a/www/build.gradle
+++ b/www/build.gradle
@@ -36,6 +36,7 @@ dependencies {
 	implementation 'mysql:mysql-connector-java:8.0.29'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc:3.2.5'
+	implementation 'commons-fileupload:commons-fileupload:1.4'
 	
 	
 }
